<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.mytvmaze.tvmaze.shows.viewModel.ShowDetailsViewModel" />

        <variable
            name="showData"
            type="com.example.mytvmaze.tvmaze.shows.model.Show" />
    </data>

    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/blue_chill"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="@{showData.name}" />

        </com.google.android.material.appbar.AppBarLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/app_bar">


            <LinearLayout
                android:id="@+id/main_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true"
                android:fitsSystemWindows="true"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_poster"
                    android:layout_width="267dp"
                    android:layout_height="400dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:contentDescription="ShTV S"
                    android:scaleType="centerCrop"
                    android:src="@drawable/placeholder_movie_poster" />

                <TextView
                    android:id="@+id/tv_show_title"
                    style="@style/show_list_title_huge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_spacing"
                    android:text="@{showData.name}"
                    tools:text="Mad Max: Fury Road" />

                <TextView
                    android:id="@+id/tv_show_genres"
                    style="@style/label_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{showData.genresAsString}"
                    tools:text="Comedy / Action" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/label_date_released"
                        style="@style/label_style_detail_smaller"
                        android:layout_width="wrap_content"
                        android:layout_alignParentTop="true"
                        android:text="@string/date_released" />

                    <TextView
                        android:id="@+id/label_rating"
                        style="@style/label_style_detail_smaller"
                        android:layout_width="wrap_content"
                        android:layout_below="@id/label_date_released"
                        android:minWidth="100dp"
                        android:text="@string/rating" />

                    <TextView
                        android:id="@+id/label_network"
                        style="@style/label_style_detail_smaller"
                        android:layout_width="wrap_content"
                        android:layout_below="@id/label_rating"
                        android:text="@string/network" />

                    <TextView
                        android:id="@+id/label_shedule"
                        style="@style/label_style_detail_smaller"
                        android:layout_width="wrap_content"
                        android:layout_below="@id/label_network"
                        android:text="@string/schedule" />

                    <TextView
                        style="@style/properties_style"
                        android:layout_width="wrap_content"
                        android:layout_toEndOf="@id/label_date_released"
                        android:text="@{showData.premiered}"
                        tools:text="2010-01-01" />

                    <TextView
                        style="@style/properties_style"
                        android:layout_width="wrap_content"
                        android:layout_below="@id/label_rating"
                        android:layout_toEndOf="@id/label_network"
                        android:text="@{showData.network.toString()}"
                        tools:text="HBO" />

                    <TextView
                        style="@style/properties_style"
                        android:layout_width="wrap_content"
                        android:layout_below="@id/label_date_released"
                        android:layout_toEndOf="@id/label_rating"
                        android:minWidth="100dp"
                        android:text="@{showData.rating.toString()}"
                        tools:text="3.5" />

                    <TextView
                        style="@style/properties_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/label_network"
                        android:layout_toEndOf="@id/label_shedule"
                        android:maxWidth="180dp"
                        android:text="@{showData.schedule.toString()}"
                        tools:text="00:00 Sunday" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/label_summary"
                    style="@style/label_style_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_spacing"
                    android:layout_marginTop="@dimen/double_spacing"
                    android:layout_marginEnd="@dimen/default_spacing"
                    android:text="@string/summary" />

                <TextView
                    android:id="@+id/movie_summary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_spacing"
                    android:layout_marginEnd="@dimen/default_spacing"
                    android:text="@{showData.formattedSummary}"
                    android:textSize="16sp"
                    tools:text="@string/lorem_ipsum" />

                <TextView
                    android:id="@+id/label_seasons"
                    style="@style/label_style_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_spacing"
                    android:layout_marginTop="@dimen/double_spacing"
                    android:layout_marginEnd="@dimen/default_spacing"
                    android:text="@string/seasons_and_episodes" />

                <LinearLayout
                    android:layout_marginStart="@dimen/default_spacing"
                    android:layout_marginEnd="@dimen/default_spacing"
                    android:layout_marginBottom="@dimen/double_spacing"
                    android:orientation="vertical"
                    android:id="@+id/seasons_episodes_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                </LinearLayout>

        </ScrollView>

        <include
            android:id="@+id/loading"
            isVisible="@{viewModel.loading}"
            layout="@layout/layout_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>

</layout>