<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:paddingLeft="@dimen/default_margin"
        android:paddingRight="@dimen/default_margin"
        android:orientation="vertical"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_movie_list_item"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardElevation="2dp"
            app:cardMaxElevation="4dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:contentPadding="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2">

                    <ImageView
                        android:id="@+id/banner_img"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/background_light"
                        android:scaleType="centerCrop"
                        android:src="@drawable/placeholder_movie_poster"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="20dp"
                        android:background="@color/color_primary_dark"
                        android:alpha="0.7"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="20dp"
                        android:gravity="center">

                        <RatingBar
                            android:theme="@style/RatingBar"
                            android:id="@+id/ratingBar"
                            style="?android:attr/ratingBarStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="15dp"
                            android:max="5"
                            android:numStars="5"
                            android:rating="0"
                            android:scaleX="1.2"
                            android:scaleY="1.2"
                            android:stepSize="0.1" />

                        <TextView
                            android:id="@+id/rating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textColor="@android:color/white"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:padding="2dp"
                            android:id="@+id/main_layout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                style="@style/show_list_title"
                                android:id="@+id/tv_title"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="TV Show Title" />

                            <TextView
                                style="@style/label_style"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="5dp"
                                android:id="@+id/tv_genres"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Genre list" />

                            <TextView
                                android:layout_marginTop="2dp"
                                android:layout_marginBottom="2dp"
                                android:id="@+id/tv_premiered"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/show_premiered" />

                            <TextView
                                android:layout_marginTop="2dp"
                                android:layout_marginBottom="2dp"
                                android:id="@+id/tv_status"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/show_status" />

                            <TextView
                                android:layout_marginTop="2dp"
                                android:layout_marginBottom="2dp"
                                android:id="@+id/tv_type"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/show_type" />

                            <TextView
                                android:layout_marginTop="2dp"
                                android:layout_marginBottom="2dp"
                                android:id="@+id/tv_network"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/show_network" />

                            <TextView
                                android:layout_marginTop="2dp"
                                android:layout_marginBottom="2dp"
                                android:id="@+id/tv_schedule"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/show_schedule" />

                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>